--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest --ui",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "next": "12.2.5",
@@ -15,11 +17,14 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@testing-library/react": "^13.4.0",
     "@types/node": "18.7.13",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
+    "@vitejs/plugin-react": "^2.1.0",
+    "@vitest/ui": "^0.23.2",
     "autoprefixer": "^10.4.8",
     "eslint": "^8.0.1",
     "eslint-config-next": "12.2.5",
@@ -28,8 +33,10 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.0",
+    "jsdom": "^20.0.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "vitest": "^0.23.2"
   }
 }
