--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,8 +2,7 @@
   "env": {
     "browser": true,
     "es2021": true,
-    "node": true,
-    "vitest/globals": true
+    "node": true
   },
   "extends": ["plugin:react/recommended", "standard"],
   "parser": "@typescript-eslint/parser",
@@ -14,7 +13,7 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react", "@typescript-eslint", "vitest"],
+  "plugins": ["react", "@typescript-eslint"],
   "rules": {
     "react/react-in-jsx-scope": ["off"],
     "camelcase": "off"
