--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "vitest --ui",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "eslint": "eslint --ext .ts,.tsx,.js,.tsx . --fix"
   },
   "dependencies": {
     "next": "12.2.5",
