--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env
 
 # vercel
 .vercel
@@ -36,3 +37,6 @@ yarn-error.log*
 next-env.d.ts
 
 pnpm-lock.yaml
+/test-results/
+/playwright-report/
+/playwright/.cache/
