--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint",
     "test": "vitest --ui",
     "coverage": "vitest run --coverage",
-    "eslint": "eslint --ext .ts,.tsx,.js,.tsx . --fix"
+    "eslint": "eslint --ext .ts,.tsx,.js,.tsx . --fix",
+    "e2e": "npx playwright test",
+    "e2e-report": "npx playwright show-report",
+    "e2e-trace": "npx playwright test --trace on",
+    "e2e-codegen": "npx playwright codegen http://localhost:3000"
   },
   "dependencies": {
     "next": "12.2.5",
@@ -18,6 +22,7 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.25.2",
     "@testing-library/react": "^13.4.0",
     "@types/node": "18.7.13",
     "@types/react": "18.0.17",
