--- a/package.json
+++ b/package.json
@@ -1,48 +1,50 @@
 {
   "name": "anime-app",
-  "version": "0.1.0",
+  "version": "1.0.3",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest --ui",
-    "coverage": "vitest run --coverage",
+    "test:unit": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
     "eslint": "eslint --ext .ts,.tsx,.js,.tsx . --fix",
-    "e2e": "npx playwright test",
-    "e2e-report": "npx playwright show-report",
-    "e2e-trace": "npx playwright test --trace on",
-    "e2e-codegen": "npx playwright codegen http://localhost:3000"
+    "test:e2e": "npx playwright test",
+    "test:e2e-report": "npx playwright show-report",
+    "test:e2e-trace": "npx playwright test --trace on",
+    "test:e2e-codegen": "npx playwright codegen http://localhost:3000"
   },
   "dependencies": {
-    "next": "12.2.5",
+    "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.25.2",
+    "@playwright/test": "^1.30.0",
     "@testing-library/react": "^13.4.0",
     "@types/node": "18.7.13",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.35.1",
-    "@typescript-eslint/parser": "^5.35.1",
-    "@vitejs/plugin-react": "^2.1.0",
-    "@vitest/ui": "^0.23.2",
-    "autoprefixer": "^10.4.8",
-    "eslint": "^8.0.1",
-    "eslint-config-next": "12.2.5",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
+    "@vitejs/plugin-react": "^2.2.0",
+    "@vitest/ui": "^0.23.4",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.33.0",
+    "eslint-config-next": "13.1.6",
     "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.31.0",
-    "jsdom": "^20.0.0",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "jsdom": "^20.0.3",
+    "next-router-mock": "0.9.1",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.6",
     "typescript": "4.7.4",
-    "vitest": "^0.23.2"
+    "vitest": "^0.23.4"
   }
 }
