--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "test:e2e-codegen": "npx playwright codegen http://localhost:3000"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "1.0.5",
+    "@prisma/client": "4.11.0",
+    "embla-carousel-react": "7.1.0",
     "next": "13.1.6",
+    "next-auth": "4.20.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^1.3.0"
@@ -43,6 +47,7 @@
     "jsdom": "^20.0.3",
     "next-router-mock": "0.9.1",
     "postcss": "^8.4.21",
+    "prisma": "4.11.0",
     "tailwindcss": "^3.2.6",
     "typescript": "4.7.4",
     "vitest": "^0.23.4"
