--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
     "react/react-in-jsx-scope": ["off"],
-    "camelcase": "off"
+    "camelcase": "off",
+    "@next/next/no-img-element": ["off"]
   }
 }
