--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "1.0.5",
     "@prisma/client": "4.11.0",
+    "@vercel/analytics": "1.0.0",
     "embla-carousel-react": "7.1.0",
     "next": "13.1.6",
     "next-auth": "4.20.1",
